--- a/css/blog.css
+++ b/css/blog.css
@@ -1,13 +1,4 @@
-.cabecera-verde{
-	margin-top: 50px;
-	background-color: #45d469;
-	padding: 3% 0%;
-	color: #fff;
-}
 
-.cabecera-verde a{
-	color: #fff;
-}
 
 a{
 	color: #3b4657;
@@ -18,25 +9,9 @@ a:hover{
 	text-decoration: none;
 }
 
-.vertical-centered-text {
-  -ms-display: flex;
-  display: flex;
-  /* alineacion vertical */
-  align-items: center;
-  /* alineacion horizontal */
-  justify-content: center; }
 
-  .content{
-  	background-color: #E6E6E6;
-  	padding: 3% 0%;
-  	color: #3b4657;
-  }
 
-  .content .box-white{
-  	background-color: #fff;
-  }
-
-  img{
+  .img-full{
   	width: 100%;
   }
 
