--- a/css/about-us.css
+++ b/css/about-us.css
@@ -18,6 +18,10 @@ a:hover{
 	text-decoration: none;
 }
 
+.about a{
+	color: #fff;
+}
+
 .vertical-centered-text {
   -ms-display: flex;
   display: flex;
