--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,12 +1,11 @@
-.portfolio{
-	background-color: #45D469;
-	color: white;
-	padding: 3% 3% 5% 3%;
-}
-.portfolio h1{
-	margin-top: 10%;
-}
 .trabajos{
 	padding: 2% 2% 2% 2%;
 	background-color: #f9f2e9;
 }
+.btn{
+	background-color:#E94E37;
+}
+
+  li{
+  	list-style-type: none;
+  }
