--- a/css/blog.css
+++ b/css/blog.css
@@ -21,7 +21,7 @@ a:hover{
 
 .comment{
 	padding: 3% 3%;
-	background-color: #E6E6E6;
+	background-color: #DEE0E3;
   	color: #3b4657;
   	margin-bottom: 2%;
 }
