--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1,14 +1,3 @@
-.cabecera-verde{
-	margin-top: 50px;
-	background-color: #45d469;
-	padding: 3% 0%;
-	color: #fff;
-}
-
-.cabecera-verde a{
-	color: #fff;
-}
-
 a{
 	color: #3b4657;
 	text-decoration: none;
@@ -22,16 +11,8 @@ a:hover{
 	color: #fff;
 }
 
-.vertical-centered-text {
-  -ms-display: flex;
-  display: flex;
-  /* alineacion vertical */
-  align-items: center;
-  /* alineacion horizontal */
-  justify-content: center; }
-
     .content{
-  	background-color: #E6E6E6;
+  	background-color: #DEE0E3;
   	padding: 3% 0%;
   	color: #3b4657;
   }
