correccion de botones en contact

--- a/css/contact.css
+++ b/css/contact.css
@@ -3,7 +3,8 @@
 	padding: 3% 3% 3% 3%;
 }
 .btn{
-	background-color:#E94E37;
+	background-color:#001848;
+	color: white;
 }
 textarea.form-control{
 	margin-top: 16%;
