--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,10 @@
 }
 .list-inline i{
 border-radius: 100%;
-border:1px solid white;
-padding:40% 69% 35% 46%;
+border:1px solid grey;
+padding:50%;
+background-color: grey;
+opacity: .5;
 }
 .our-latest{
 	background-color:#F9F2E9;
