--- a/css/about-us.css
+++ b/css/about-us.css
@@ -11,77 +11,76 @@ a:hover{
 	color: #fff;
 }
 
-    .content{
-  	background-color: #DEE0E3;
-  	padding: 3% 0%;
-  	color: #3b4657;
-  }
-
-
-  .progress{
-  	background-color: #fff;
-  }
-
-  .box{
-  	display: inline-block;
-  	height: 30px;
-  	width: 30px;
-  	border-radius: 50%;
-  	line-height: 30px;
-  	color: #fff;
-  }
-
-  .box{
-  	display: inline-block;
-  	height: 30px;
-  	width: 30px;
-  	border-radius: 50%;
-  	line-height: 30px;
-  	color: #fff;
+.content{
+	background-color: #DEE0E3;
+	padding: 3% 0%;
+	color: #3b4657;
 }
-  .fb{
-  	background-color: #5A85D6;
-  }
 
-  .fb:hover{
-  	background-color: #fff;
-  	color: #5A85D6;
-  }
-
-  .gp{
-	background-color: red;
-  }
-
-  .gp:hover{
+.progress{
 	background-color: #fff;
-	color: red;
-  }
+}
 
-  .tw{
-	background-color: #5BC0DD;
-  }
-
-  .tw:hover{
-	background-color: #fff;
-	color: #5BC0DD;
-  }
-
-  .in{
-  	background-color: #25A7D8;
-  }
-
-.in:hover{
-  	background-color: #fff;
-  	color: #25A7D8;
-  }
-    h6{
-  	 	color: #888;
-  }
-
-  .mt-2{
-  	margin-top: 2%;
-  }
-
-  .about h6{
+.box{
+	display: inline-block;
+	height: 30px;
+	width: 30px;
+	border-radius: 50%;
+	line-height: 30px;
 	color: #fff;
-  }
+}
+
+.box{
+	display: inline-block;
+	height: 30px;
+	width: 30px;
+	border-radius: 50%;
+	line-height: 30px;
+	color: #fff;
+}
+.fb{
+	background-color: #5A85D6;
+}
+
+.fb:hover{
+	background-color: #fff;
+	color: #5A85D6;
+}
+
+.gp{
+background-color: red;
+}
+
+.gp:hover{
+background-color: #fff;
+color: red;
+}
+
+.tw{
+background-color: #5BC0DD;
+}
+
+.tw:hover{
+background-color: #fff;
+color: #5BC0DD;
+}
+
+.lin{
+	background-color: #25A7D8;
+}
+
+.lin:hover{
+	background-color: #fff;
+	color: #25A7D8;
+}
+h6{
+	color: #888;
+}
+
+.mt-2{
+	margin-top: 2%;
+}
+
+.about h6{
+color: #fff;
+}
